--- a/templates/home.html
+++ b/templates/home.html
@@ -1,51 +1,32 @@
 <!doctype html>
 <html>
   <head>
-    <title> New Careers</title>
-    <style>
-      h1 {
-        font-size:40px;
-        font-family:微軟正黑體;
-        color: rgb(50, 50, 50);
-        text-align:center;
-      }
-      #career_pic{
-        width: 100%;
-        height: 360px;
-        object-fit :cover;
-      }
-      h2 {
-        font-size:32px;
-        font-family:微軟正黑體;
-        color: rgb(101, 101, 101);
-        text-align:center;
-        font-weight:normal;
-      }
-      .bodytext {
-        font-family:微軟正黑體;
-        color: rgb(80, 80, 80);
-      }
-      #container{
-        max-width:720px;
-        margin: 0 auto;
-      }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> {{company_name}} Careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  
   </head>
   <body>
-    <div id='container'>
-      <h1> New Careers</h1>
-    <img id="career_pic" src='https://career-website.jhn840530.repl.co/static/career_pic.jpg' height='320'>
-    <h2>About New</h2>
-    <p class='bodytext'>Lorem ipsum dolor sit amet. Est deserunt voluptatem ut exercitationem nihil id velit amet ex consequatur veritatis eum laudantium debitis. Aut incidunt enim rem sunt cumque aut consequuntur aliquam sed quisquam omnis?
+    <div class="container" style="max-width:720px;margin: 0 auto;">
+      <h1 class="text-center mt-4 mb-4"> {{company_name}} Careers</h1>
+    <img style="width:100%;height:360px;object-fit:cover;" src='https://career-website.jhn840530.repl.co/static/career_pic.jpg' height='320'>
+    <h2 class="text-center mt-4 mb-4">About {{company_name}}</h2>
+    <p >Lorem ipsum dolor sit amet. Est deserunt voluptatem ut exercitationem nihil id velit amet ex consequatur veritatis eum laudantium debitis. Aut incidunt enim rem sunt cumque aut consequuntur aliquam sed quisquam omnis?
 
 Id alias unde nam obcaecati velit aut cupiditate temporibus est illum optio. Et impedit fuga eos placeat possimus aut magnam molestiae. Aut fugiat maxime sed nulla beatae est nihil quasi sed corporis nobis qui voluptatum neque et molestiae nesciunt et deserunt vitae. Non magnam facere ut quia quis ut eius consectetur et quia dignissimos aut facere voluptatem qui voluptatem repellat.
 </p>
-    <h2>Open Positions</h2>
-    <p class='bodytext'>TODO</p>
+    <h2 class="text-center mt-4 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>     
+    
     <p>fake it, until you make it</p>
     <div style="text-align:center;">
-      <button>Contact us</button>
-      <p>Copyright 2023, Alex</p>
+      <button class="btn btn-primary btn-lg">Contact us</button>
+      <p class="mt-4">Copyright 2023, Alex</p>
     </div>
     
     </div>
