--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -15,6 +15,6 @@
       </div>
     </div>
     <div class="col-3 text-end ">
-      <button type="button" class="btn btn-outline-primary">Apply</button>
+      <a href='http://google.com' type="button" class="btn btn-outline-primary">Apply</a>
     </div>  
 </div>
