--- a/templates/home.html
+++ b/templates/home.html
@@ -1,47 +1,47 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title> {{company_name}} Careers</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    {% include 'boostramp.html' %}
   
   </head>
+  
   <body>
     {% include 'navbar.html'%}
     <img class='img-fluid' style="width:100%;height:360px;object-fit:cover;" src='/static/career_pic.jpg' height='320'>
-    <div class="container" style="max-width:960px;margin: 0 auto;">
+    
+    <div class="container" style="max-width:960px;margin: 0 auto;">    
       
+      <h2 class="text-center mt-4 mb-4">About {{company_name}}</h2>
+      <div class='row'>
+        <div class='col-md-7'>
+        <p >Lorem ipsum dolor sit amet. Est deserunt voluptatem ut exercitationem nihil id velit amet ex consequatur veritatis eum laudantium debitis. Aut incidunt enim rem sunt cumque aut consequuntur aliquam sed quisquam omnis?
     
-    <h2 class="text-center mt-4 mb-4">About {{company_name}}</h2>
-    <div class='row'>
-      <div class='col-md-7'>
-      <p >Lorem ipsum dolor sit amet. Est deserunt voluptatem ut exercitationem nihil id velit amet ex consequatur veritatis eum laudantium debitis. Aut incidunt enim rem sunt cumque aut consequuntur aliquam sed quisquam omnis?
-
-Id alias unde nam obcaecati velit aut cupiditate temporibus est illum optio. Et impedit fuga eos placeat possimus aut magnam molestiae. Aut fugiat maxime sed nulla beatae est nihil quasi sed corporis nobis qui voluptatum neque et molestiae nesciunt et deserunt vitae. Non magnam facere ut quia quis ut eius consectetur et quia dignissimos aut facere voluptatem qui voluptatem repellat.
-      </p>
+    Id alias unde nam obcaecati velit aut cupiditate temporibus est illum optio. Et impedit fuga eos placeat possimus aut magnam molestiae. Aut fugiat maxime sed nulla beatae est nihil quasi sed corporis nobis qui voluptatum neque et molestiae nesciunt et deserunt vitae. Non magnam facere ut quia quis ut eius consectetur et quia dignissimos aut facere voluptatem qui voluptatem repellat.
+        </p>
+        </div>
+        <div class='d-none d-md-block col-md-5'>
+        <img src="/static/people.jpg" style='height:250px;border-radius:4px'>
+        </div>
       </div>
-      <div class='d-none d-md-block col-md-5'>
-      <img src="/static/people.jpg" style='height:250px;border-radius:4px'>
+      
+      <h2 class="text-center mt-4 mb-4">Open Positions</h2>
+        <div>
+          {% for job in jobs %}
+            {% include 'jobitem.html' %}
+          {% endfor %}
+        </div>     
+      
+      <p>fake it, until you make it</p>
+      <div style="text-align:center;">
+        <a class="btn btn-primary btn-lg" href='mailto:jhn840530@gmail.com?subject=hello'>Contact us</a>
+    
       </div>
+      {% include 'footer.html' %}
+      
+      
     </div>
-    
-    <h2 class="text-center mt-4 mb-4">Open Positions</h2>
-      <div>
-        {% for job in jobs %}
-          {% include 'jobitem.html' %}
-        {% endfor %}
-      </div>     
-    
-    <p>fake it, until you make it</p>
-    <div style="text-align:center;">
-      <a class="btn btn-primary btn-lg" href='mailto:jhn840530@gmail.com?subject=hello'>Contact us</a>
-
-    </div>
-    {% include 'footer.html' %}
-    
-    
-    </div>
-    
+      
   </body>
 </html>
